feat: information update
correction to info and facts

--- a/public/index.html
+++ b/public/index.html
@@ -105,8 +105,10 @@
 </header>
 <main class="main"><div class="profile">
     <div class="profile_inner">
-        <h1>William Weelau CHEONG</h1>
-        <span>Aspiring Technopreneur</span><div class="social-icons" >
+        <h1>Divineforge Technology Enterprise</h1>
+        <span>by William Weelau CHEONG, I found my life in building things,
+enjoy searching those lego bricks, from a piles from loose bricks
+aspire to build a tower.</span><div class="social-icons" >
     <a href="https://x.com/divineforge" target="_blank" rel="noopener noreferrer me"
         title="X">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
@@ -190,9 +192,9 @@
 </div>
 
         <div class="buttons">
-            <a class="button" href="https://blog.divineforge.com" rel="noopener" title="Blog">
+            <a class="button" href="https://dev.to/divineforge" rel="noopener" title="Dev.to Community">
                 <span class="button-inner">
-                    Blog&nbsp;
+                    Dev.to Community&nbsp;
                     <svg fill="none" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round"
                         stroke-linejoin="round" stroke-width="2.5" viewBox="0 0 24 24" height="14" width="14">
                         <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"></path>
@@ -201,9 +203,9 @@
                     </svg>
                 </span>
             </a>
-            <a class="button" href="https://gozen.dev" rel="noopener" title="Gozen.dev">
+            <a class="button" href="https://gozen.dev" rel="noopener" title="Golang Technology on Gozen.dev">
                 <span class="button-inner">
-                    Gozen.dev&nbsp;
+                    Golang Technology on Gozen.dev&nbsp;
                     <svg fill="none" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round"
                         stroke-linejoin="round" stroke-width="2.5" viewBox="0 0 24 24" height="14" width="14">
                         <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"></path>
@@ -212,9 +214,20 @@
                     </svg>
                 </span>
             </a>
-            <a class="button" href="https://www.buymeacoffee.com/divineforge" rel="noopener" title="Buy Me a Coffee">
+            <a class="button" href="https://blog.divineforge.com" rel="noopener" title="Hashnode Blog (Closing)">
                 <span class="button-inner">
-                    Buy Me a Coffee&nbsp;
+                    Hashnode Blog (Closing)&nbsp;
+                    <svg fill="none" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round"
+                        stroke-linejoin="round" stroke-width="2.5" viewBox="0 0 24 24" height="14" width="14">
+                        <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"></path>
+                        <path d="M15 3h6v6"></path>
+                        <path d="M10 14L21 3"></path>
+                    </svg>
+                </span>
+            </a>
+            <a class="button" href="https://www.buymeacoffee.com/divineforge" rel="noopener" title="Buy Me a Drink ;)">
+                <span class="button-inner">
+                    Buy Me a Drink ;)&nbsp;
                     <svg fill="none" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round"
                         stroke-linejoin="round" stroke-width="2.5" viewBox="0 0 24 24" height="14" width="14">
                         <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"></path>
